# face_detection

./: CMakeLists.txt  face_detection_plugin.xml  package.xml
include/face_detection/: face_detection.h
launch/: face_detection.launch
src/: face_detection.cpp
