<?xml version="1.0"?>
<package format="2">
  <name>face_detection</name>
  <version>2.0.0</version>
  <description>The face_detection package</description>

  <maintainer email="ksals@todo.todo">ksals</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/face_detection_plugin.xml"/>
  </export>
</package>
